--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT = 8080
 DEV_MODE = development
 MONGO_URL = mongodb+srv://roodra:bPRPA8JqWfT6ScaY@cluster0.srjswpb.mongodb.net/jobportal
 MONGO_LOCAL_URL = mongodb://127.0.0.1:27017/jobportal
+JWT_SECRET = DJHSJDBJASB879821%45@6868GJGJGJHGJ
